refactor - links and names

--- a/index.html
+++ b/index.html
@@ -28,22 +28,16 @@
         <div id="music-list" class="w-full"></div>
 
         <footer class="flex text-white w-full justify-center gap-6 mt-4 text-md">
-            <a href="#" class="hover:text-green-500 transition">
-                <i class="bi bi-spotify"></i>
-            </a>
-
-            <a href="#" class="hover:text-red-500 transition">
+            <a href="https://www.youtube.com/@gael5123" class="hover:text-red-500 transition">
                 <i class="bi bi-youtube"></i>
             </a>
 
-            <a href="#" class="hover:text-blue-500 transition">
-                <i class="bi bi-linkedin"></i>
-            </a>
-
-            <a href="#" class="hover:text-gray-400 transition">
+            <a href="https://www.instagram.com/eu_gaael/" class="hover:text-gray-400 transition">
                 <i class="bi bi-instagram"></i>
             </a>
         </footer>
+
+        <a id="subtitle" href="https://wa.me/5542998653411" class="my-4 text-xs">Desenvolvido por <span class="font-bold">Gabriel Ribas</span></a>
     </div>
 
     <script src="./assets/js/index.js"></script>
